<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Nombre del fichero -->
    <TextView
        android:id="@+id/textNombreFichero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtNombreFichero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eNombreFichero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textNombreFichero"
        app:layout_constraintTop_toTopOf="@id/textNombreFichero" />

    <!-- Botones debajo del nombre del fichero -->
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnGuardar"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnLeer"
        app:layout_constraintTop_toBottomOf="@id/eNombreFichero"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/btnLeer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnLeer"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/btnGuardar"
        app:layout_constraintEnd_toStartOf="@id/btnGuardarSD"
        app:layout_constraintTop_toTopOf="@id/btnGuardar"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/btnGuardarSD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnGuardarSD"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/btnLeer"
        app:layout_constraintEnd_toStartOf="@id/btnLeerSD"
        app:layout_constraintTop_toTopOf="@id/btnGuardar"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/btnLeerSD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnLeerSD"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/btnGuardarSD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnGuardar"
        app:layout_constraintHorizontal_weight="1" />

    <!-- EditText para la nota (ocupando el resto de la pantalla) -->
    <EditText
        android:id="@+id/etNota"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#E0D9D9"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGuardar" />

    <!-- Botón Borrar al final -->
    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnBorrar"
        android:textSize="12sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
